# leaf-wasm

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  dockerize.yml
crates/backend/: Cargo.toml
crates/backend/src/: db.rs  lib.rs
crates/backend/src/migrator/: m_20230206_000001_create_user_table.rs  mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: embed.rs  flags.rs  lib.rs
crates/cli/src/local_server/: mod.rs  service.rs
crates/common/: Cargo.toml
crates/common/src/: errors.rs  lib.rs  manifest.rs
crates/compiler/: Cargo.toml
crates/compiler/engine/: quickjs.wasm  wasi_snapshot_preview1.wasm
crates/compiler/src/: compile.rs
crates/component-compiler/: Cargo.toml
crates/component-compiler/src/: codegen.rs  lib.rs
crates/host-impl/: Cargo.toml
crates/host-impl/kv/: Cargo.toml
crates/host-impl/kv/src/: dummy.rs  lib.rs  memory.rs
crates/host-impl/src/: http_handler.rs  kv.rs  lib.rs
crates/leaf-abi-impl/: Cargo.toml
crates/leaf-abi-impl/src/: leaf_http.rs  lib.rs
crates/leaf-codegen/: Cargo.toml
crates/leaf-codegen/engine/: quickjs.wasm
crates/leaf-codegen/src/: compile.rs  lib.rs
crates/leaf-compiler/: Cargo.toml
crates/leaf-compiler/engine/: quickjs.wasm  wasi_snapshot_preview1.wasm
crates/leaf-compiler/src/: compile.rs  lib.rs
crates/leaf-compiler/wit/: strings.wit
crates/leaf-host-impl/: Cargo.toml
crates/leaf-host-impl/src/: http_fetch.rs  http_handler.rs  lib.rs
crates/leaf-sdk/: Cargo.toml
crates/leaf-sdk-impl/: Cargo.toml
crates/leaf-sdk-impl/src/: lib.rs
crates/leaf-sdk-macro/: Cargo.toml
crates/leaf-sdk-macro/src/: lib.rs
crates/leaf-sdk/src/: fetch.rs  lib.rs
crates/leaf-wasi/: Cargo.toml  README.md  wasi.wit
crates/leaf-wasi/src/: lib.rs
crates/leaf-wasi/wasi-common/: Cargo.toml
crates/leaf-worker/: Cargo.toml
crates/leaf-worker/src/: errors.rs  worker.rs
crates/runner/: Cargo.toml
crates/runner/src/: lib.rs
crates/runner/src/run_server/: config.rs  server.rs
crates/rust-sdk/: Cargo.toml
crates/rust-sdk-macro/src/: lib.rs
crates/rust-sdk/src/: kv.rs  lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: context.rs  lib.rs  pool.rs  worker.rs
deploy/: .gitignore  docker-compose.yml  leaf-runner.Dockerfile
etc/sample-rust/: http-fetch-hello.rs  http-hello.rs
examples/hello-rust/: Cargo.toml
examples/hello-rust/src/: lib.rs
examples/js-basic/: Cargo.toml  leaf.toml
examples/js-basic/src/: index.js
examples/js-fetch/: Cargo.toml  leaf.toml
examples/js-fetch/src/: index.js
examples/rust-basic/: Cargo.toml  leaf.toml
examples/rust-basic/src/: lib.rs
examples/rust-fetch/: Cargo.toml  leaf.toml
examples/rust-fetch/src/: lib.rs
examples/rust-kv/: Cargo.toml  leaf.toml
examples/rust-kv/src/: lib.rs
lib/compiler/: Cargo.toml
lib/compiler/src/: lib.rs
lib/sdk/: Cargo.toml
lib/sdk-macro/: Cargo.toml
lib/sdk-macro/src/: lib.rs
lib/sdk/src/: lib.rs
sample/: Cargo.toml  Cargo.toml.tpl  leaf.toml
sample/src/: lib.rs
sdk/rust/: Cargo.toml
sdk/rust/macro/: Cargo.toml
sdk/rust/macro/src/: lib.rs
sdk/rust/src/: lib.rs
src/: backend.rs  base.rs  cli.rs  cmd.rs  errors.rs  main.rs  runner.rs  server.rs  vars.rs
src/cmd/: cli.rs  compile.rs  mod.rs  new.rs  up.rs
src/cmd/cli/: compile.rs  up.rs
src/cmd_cli/: compile.rs  new.rs  up.rs
src/common/: Cargo.toml  embed.rs  errors.rs  manifest.rs  mod.rs  vars.rs
src/common/src/: lib.rs
src/common/src/compiler/: generator.rs  mod.rs
src/common/src/manifest/: build.rs  mod.rs
src/local_server/: mod.rs  service.rs
src/run_server/: admin.rs  mod.rs  query.rs  server.rs
src/server/: mod.rs  service.rs  wasm.rs  wit.rs
src/wasm/: context.rs  mod.rs  pool.rs  pre_worker.rs  wit.rs  worker.rs
src/wit/: fetch.rs  http.rs  mod.rs
templates/hello-fetch-rust/src/: lib.rs
templates/hello-js/src/: index.js
tests/: README.md  integration.rs  leaf-runner.toml  sample.wasm
tests/data/: manifest.toml  sample.wasm
wit/: http-fetch.rs  http-fetch.wit  http-handler.rs  http-handler.wit  http-interface.wit.draft  kv.rs  kv.wit  leaf-http-fetch.rs  leaf-http-fetch.wit  leaf-http.rs  leaf-http.wit  wasi_snapshot_preview1.wasm
