[package]
name = "leaf-wasm"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
default-run = "leaf-cli"

[workspace.package]
version = "0.1.18"
authors = ["fuxiaohei<fudong0797@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { version = "4.1.1", features = ["derive"] }
futures = "0.3.25"
hyper = { version = "0.14.23", features = ["full"] }
hyper-rustls = { version = "0.23.2", features = ["http2"] }
lazy_static = "1.4.0"
leaf-compiler = { path = "./crates/leaf-compiler" }
leaf-host-impl = { path = "./crates/leaf-host-impl" }
leaf-worker = { path = "./crates/leaf-worker" }
matchit = "0.7.0"
mini-moka = "0.10.0"
once_cell = "1.17.0"
reqwest = { workspace = true }
rust-embed = "6.4.2"
serde = "1.0.152"
serde_derive = "1.0.152"
thiserror = { workspace = true }
time = "0.3.17"
tokio = { workspace = true }
toml = "0.5.10"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.16", features = ["time", "local-time"] }
url = "2.3.1"
wasmtime = { workspace = true }

[build-dependencies]
leaf-compiler = { path = "./crates/leaf-compiler" }
vergen = "7.5.0"

[[bin]]
name = "leaf-cli"
path = "src/cli.rs"

[[bin]]
name = "leaf-runner"
path = "src/runner.rs"

[workspace]
members = [
    "crates/leaf-compiler",
    "crates/leaf-host-impl",
    "crates/leaf-sdk",
    "crates/leaf-sdk-macro",
    "crates/leaf-worker",
    "examples/rust-basic",
    "examples/rust-fetch",
]

[workspace.dependencies]
anyhow = "1.0.68"
async-trait = "0.1.61"
thiserror = "1.0.38"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = [
    "component-model",
    "async"
], rev = "b86cba98" }
wit-component = "0.3.2"
wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "04da8c22" }
wit-bindgen-gen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "04da8c22" }
wit-bindgen-gen-host-js = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "04da8c22" }
wit-bindgen-core = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "04da8c22" }
wit-parser = "0.3.1"
bytes = "1.3.0"
http = "0.2.8"
tokio = { version = "1.24.1", features = ["full"] }
reqwest = { version = "0.11.13", features = ["rustls-tls"] }
tracing = { version = "0.1.37", features = [
    "max_level_debug",
    "release_max_level_info"
] }
