[package]
name = "leaf-wasm"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
default-run = "leaf-cli"

[workspace.package]
version = "0.1.20"
authors = ["fuxiaohei<fudong0797@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
hyper = { workspace = true }
lazy_static = "1.4.0"
leaf-cli = { path = "./crates/cli" }
leaf-common = { path = "./crates/common" }
leaf-compiler = { path = "./crates/compiler" }
leaf-host-impl = { path = "./crates/host-impl" }
leaf-runner = { path = "./crates/runner" }
leaf-worker = { path = "./crates/worker" }
leaf-backend = { path = "./crates/backend" }
reqwest = { workspace = true }
thiserror = { workspace = true }
time = "0.3.17"
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.16", features = [
    "time",
    "local-time",
    "env-filter"
] }
url = "2.3.1"
wasmtime = { workspace = true }

[build-dependencies]
leaf-compiler = { path = "./crates/compiler" }
vergen = "7.5.0"

[[bin]]
name = "leaf-cli"
path = "src/cli.rs"

[[bin]]
name = "leaf-runner"
path = "src/runner.rs"

[[bin]]
name = "leaf-backend"
path = "src/backend.rs"

[workspace]
members = ["crates/*", "examples/rust-basic", "examples/rust-fetch"]

[workspace.dependencies]
anyhow = "1.0.68"
async-trait = "0.1.64"
thiserror = "1.0.38"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = [
    "component-model",
    "async"
] }
wit-component = "0.5.1"
wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }
wit-bindgen-gen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }
wit-bindgen-core = { git = "https://github.com/bytecodealliance/wit-bindgen" }
wit-parser = "0.5.0"
bytes = "1.4.0"
http = "0.2.8"
tokio = { version = "1.25.0", features = ["full"] }
reqwest = { version = "0.11.14", features = ["rustls-tls"] }
tracing = { version = "0.1.37", features = [
    "max_level_debug",
    "release_max_level_info"
] }
wat = "1.0.57"
toml = "0.7.1"
hyper = { version = "0.14.24", features = ["full"] }
clap = { version = "4.1.4", features = ["derive"] }
futures = "0.3.26"
