[package]
name = "leaf-wasm"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[workspace.package]
version = "0.2.0"
authors = ["fuxiaohei<fudong0797@gmail.com>"]
edition = "2021"

[dependencies]

[build-dependencies]
common = { path = "src/common" }

[workspace]
members = ["sdk/rust", "src/bin", "src/common"]
