[package]
name = "sample"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0.66"
bytes = "1.3.0"
http = "0.2.8"
leaf-sdk = { path = "../crates/leaf-sdk"}
leaf-sdk-macro = { path = "../crates/leaf-sdk-macro"}
wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }

[lib]
crate-type = ["cdylib"]