[package]
name = "leaf-backend"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
tokio = { workspace = true }
warp = { version = "0.3.3", features = ["tokio-rustls"] }
anyhow = { workspace = true }
tracing = { workspace = true }
sea-orm = { version = "0.10.7", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "with-time"
] }
once_cell = "1.17.0"
sea-orm-migration = "0.10.7"
async-trait = { workspace = true }
time = "0.3.17"
