[package]
name = "leaf-backend"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
once_cell = "1.17.0"
sea-orm = { version = "0.10.7", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "with-time"
] }
sea-orm-migration = "0.10.7"
time = "0.3.17"
tokio = { workspace = true }
tracing = { workspace = true }
warp = { version = "0.3.3", features = ["tokio-rustls"] }
