[package]
name = "leaf-cli"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workerspace = true }
futures = { workspace = true }
hyper = { workspace = true }
leaf-common = { path = "../common" }
leaf-compiler = { path = "../compiler" }
leaf-host-impl = { path = "../host-impl" }
leaf-worker = { path = "../worker" }
once_cell = "1.17.0"
rust-embed = "6.4.2"
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
