[package]
name = "leaf-cli"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.1.4", features = ["derive"] }
futures = { workspace = true }
hyper = { workspace = true }
leaf-common = { path = "../common" }
leaf-compiler = { path = "../compiler" }
leaf-host-impl = { path = "../host-impl" }
leaf-host-kv = { path = "../host-impl/kv" }
leaf-worker = { path = "../worker" }
once_cell = "1.17.0"
rust-embed = "6.4.2"
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
