[package]
name = "component-compiler"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0.66"
thiserror = "1.0.37"
wit-component = "0.3.2"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = ["component-model"] }