[package]
name = "leaf-codegen"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true}
thiserror = {workspace =true}
wasmtime = { workspace =true }
wit-bindgen-core = { workspace =true }
wit-bindgen-gen-guest-rust ={ workspace =true }
wit-component = { workspace =true }
wit-parser = { workspace =true }
