[package]
name = "leaf-sdk-impl"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0.66"
bytes = "1.3.0"
http = "0.2.8"
wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }

[lib]
crate-type = ["cdylib"]
