[package]
name = "leaf-sdk-macro"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0.66"
bytes = "1.3.0"
http = "0.2.8"
quote = "1.0.21"
syn = { version = "1.0.105", features = ["full"] }
wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }

[lib]
proc-macro = true
