[package]
name = "leaf-sdk-macro"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow =  { workspace = true }
bytes =  { workspace = true }
http =  { workspace = true }
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full"] }

[lib]
proc-macro = true
