[package]
name = "leaf-runner"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
lazy_static = "1.4.0"
leaf-host-impl = { path = "../host-impl" }
leaf-worker = { path = "../worker" }
matchit = "0.7.0"
mini-moka = "0.10.0"
serde = "1.0.152"
serde_derive = "1.0.152"
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
