[package]
name = "leaf-sdk"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
leaf-sdk-macro = { path = "../rust-sdk-macro" }
leaf-host-kv = { path = "../host-impl/kv" }
wit-bindgen-guest-rust = { workspace = true }
