[package]
name = "leaf-sdk"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
leaf-host-kv = { path = "../host-impl/kv" }
leaf-sdk-macro = { path = "../rust-sdk-macro" }
wit-bindgen-guest-rust = { workspace = true }
