[package]
name = "rust-fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
http = "0.2.8"
leaf-sdk = { path = "../../crates/leaf-sdk" }
wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "04da8c22" }

[lib]
crate-type = ["cdylib"]
