[package]
name = "leaf-sdk"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0.69"
bytes = "1.4.0"
http = "0.2.8"
leaf-sdk-macro = { path = "./macro" }

[dev-dependencies]
wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "a9840311a451c2b1bb7c5091f956e0cfd84e2ce0" }

[lib]
doctest = false
