[package]
name = "leaf-sdk-macro"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0.69"
bytes = "1.4.0"
http = "0.2.8"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full"] }

[lib]
proc-macro = true
test = false
doctest = false
